Ver 1 of microservice which can be accessed for specified API only with JWT token.

--- a/spring-security-keycloak/spring-security-resource-server/src/main/resources/application.properties
+++ b/spring-security-keycloak/spring-security-resource-server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+keycloak.auth-server-url=http://localhost:8081/auth
+keycloak.realm=example
+keycloak.resource=training
+keycloak.public-client=true
+keycloak.bearer-only=true
+keycloak.cors=true
 
+spring.main.allow-circular-references=true
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
+management.endpoints.web.exposure.include=*
